AUGREL/src/objects/Skip_Trace__c.object
<CustomObject>
    <description>Transformed copy of skip trace notes entered in Collections Host PF11 screen and primary
location for creation and maintenance of skip trace information within Salesforce.</description>
    <fields>
        <fullName>Accurint_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accurint Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accurint_Date__c</fullName>
        <label>Accurint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accurint_Search_Method__c</fullName>
        <label>Accurint Search Method</label>
        <picklist>
            <picklistValues>
                <fullName>Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real-Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Registration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Address10_Date_Range__c</fullName>
        <label>Address10 Date Range</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address10_Source__c</fullName>
        <label>Address10 Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address10__c</fullName>
        <label>Address10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address1_Date_Range__c</fullName>
        <label>Address1 Date Range</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1_Source__c</fullName>
        <label>Address1 Source</label>
        <picklist>
            <picklistValues>
                <fullName>System Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved 3rd Party Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iVault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address2_Date_Range__c</fullName>
        <label>Address2 Date Range</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Source__c</fullName>
        <label>Address2 Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMS Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMS_Credit_App_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit App Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMS_Credit_App_Date__c</fullName>
        <label>Credit App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Date__c</fullName>
        <label>DMS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Data_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Data Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Data_Date__c</fullName>
        <label>Fast Data Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Data_Search_Method__c</fullName>
        <label>Fast Data Search Method</label>
        <picklist>
            <picklistValues>
                <fullName>Base I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super/Phone+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FirstPursuit</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Skip Trace</relationshipLabel>
        <relationshipName>Skip_Trace</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Innovis_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Innovis Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Innovis_Date__c</fullName>
        <label>Innovis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Notes__c</fullName>
        <label>Miscellaneous Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Accounts_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Accounts Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Accounts_Date__c</fullName>
        <label>Multiple Accounts Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_Reviewed_Back_To_Date__c</fullName>
        <label>Notes Reviewed Back To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Review_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Review Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Review_Date__c</fullName>
        <label>Payment Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone10_CS_CX__c</fullName>
        <label>Phone10 CS/CX</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone10_Date__c</fullName>
        <label>Phone10 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone10_LastCallOutcome__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: Text field to store Last Call Outcome for Phone10</description>
        <label>Phone10 Last Call Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone10_Last_Called_Timestamp__c</fullName>
        <description>Timestamp of the last time this phone number was called using click to dial.</description>
        <label>Phone10 Last Called Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone10_LocationInfo__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: Text field to store Location Information based on Last Call Outcome for Phone10</description>
        <label>Phone10 Location Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone10_Source__c</fullName>
        <label>Phone10 Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone10_Status__c</fullName>
        <label>Phone10 Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone10_Type__c</fullName>
        <label>Phone10 Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone10__c</fullName>
        <label>Phone10</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone11_CS_CX__c</fullName>
        <label>Phone11 CS/CX</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone11_Date__c</fullName>
        <label>Phone11 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone11_LastCallOutcome__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: Text field to store Last Call Outcome for Phone11</description>
        <label>Phone11 Last Call Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone11_Last_Called_Timestamp__c</fullName>
        <description>Timestamp of the last time this phone number was called using click to dial.</description>
        <label>Phone11 Last Called Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone11_LocationInfo__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: Text field to store Location Information based on Last Call Outcome for Phone11</description>
        <label>Phone11 Location Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone11_Source__c</fullName>
        <label>Phone11 Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone11_Status__c</fullName>
        <label>Phone11 Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone11_Type__c</fullName>
        <label>Phone11 Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone11__c</fullName>
        <label>Phone11</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone12_CS_CX__c</fullName>
        <label>Phone12 CS/CX</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone12_Date__c</fullName>
        <label>Phone12 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone12_LastCallOutcome__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: Text field to store Last Call Outcome for Phone12</description>
        <label>Phone12 Last Call Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone12_Last_Called_Timestamp__c</fullName>
        <description>Timestamp of the last time this phone number was called using click to dial.</description>
        <label>Phone12 Last Called Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone12_LocationInfo__c</fullName>
        <description>SRC: AB6 Requirements
INT: NA
Trans: NA
BU: Collections
FD: Text field to store Location Information based on Last Call Outcome for Phone12</description>
        <label>Phone12 Location Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone12_Source__c</fullName>
        <label>Phone12 Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone12_Status__c</fullName>
        <label>Phone12 Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone12_Type__c</fullName>
        <label>Phone12 Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone12__c</fullName>
        <label>Phone12</label>
        <type>Phone</type>
    </fields>
    <label>Skip Trace</label>
    <nameField>
        <label>Skip Trace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skip Trace</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>